# scaleway-sdk-python

./: .buildinfo  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  genindex.html  index.html  module.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
docs/: .gitignore  Makefile  conf.py  generate_docs.sh  index.rst  modules.rst  pyproject.toml
docs/_build/html/guide/: modules.html  scaleway.account.html  scaleway.account.v2.html  scaleway.account.v3.html  scaleway.applesilicon.html  scaleway.applesilicon.v1alpha1.html  scaleway.audit_trail.html  scaleway.audit_trail.v1alpha1.html  scaleway.baremetal.html  scaleway.baremetal.v1.html  scaleway.baremetal.v3.html  scaleway.billing.html  scaleway.billing.v2alpha1.html  scaleway.billing.v2beta1.html  scaleway.block.html  scaleway.block.v1alpha1.html  scaleway.cockpit.html  scaleway.cockpit.v1.html  scaleway.cockpit.v1beta1.html  scaleway.container.html  scaleway.container.v1beta1.html  scaleway.dedibox.html  scaleway.dedibox.v1.html  scaleway.document_db.html  scaleway.document_db.v1beta1.html  scaleway.domain.html  scaleway.domain.v2beta1.html  scaleway.edge_services.html  scaleway.edge_services.v1alpha1.html  scaleway.flexibleip.html  scaleway.flexibleip.v1alpha1.html  scaleway.function.html  scaleway.function.v1beta1.html  scaleway.html  scaleway.iam.html  scaleway.iam.v1alpha1.html  scaleway.inference.html  scaleway.inference.v1beta1.html  scaleway.instance.html  scaleway.instance.v1.html  (+46 more)
docs/_templates/autoapi/: index.rst  macros.rst
docs/_templates/autoapi/python/: class.rst  data.rst  module.rst  property.rst
scaleway/: README.md  pyproject.toml  vcr_config.py
scaleway-async/: README.md  pyproject.toml
scaleway-async/scaleway_async/: __init__.py  bridge.py
scaleway-async/scaleway_async/account/v2/: __init__.py  api.py  marshalling.py  types.py
scaleway-async/scaleway_async/account/v3/: api.py  marshalling.py  types.py
scaleway-async/scaleway_async/annotations/v1/: api.py  marshalling.py
scaleway-async/scaleway_async/applesilicon/v1alpha1/: __init__.py  api.py  content.py  marshalling.py  types.py
scaleway-async/scaleway_async/audit_trail/v1alpha1/: __init__.py  api.py  content.py  marshalling.py  types.py
scaleway-async/scaleway_async/autoscaling/v1alpha1/: __init__.py  api.py  marshalling.py  types.py
scaleway-async/scaleway_async/autoscaling/v1alpha2/: __init__.py  api.py  types.py
scaleway-async/scaleway_async/baremetal/v1/: __init__.py  api.py  marshalling.py  types.py
scaleway-async/scaleway_async/baremetal/v3/: __init__.py  api.py  content.py  marshalling.py  types.py
scaleway-async/scaleway_async/billing/v2/: api.py  marshalling.py  types.py
scaleway-async/scaleway_async/billing/v2alpha1/: api.py  marshalling.py  types.py
scaleway-async/scaleway_async/billing/v2beta1/: __init__.py  api.py  marshalling.py  types.py
scaleway-async/scaleway_async/block/v1/: api.py  marshalling.py  types.py
scaleway-async/scaleway_async/block/v1alpha1/: __init__.py  api.py  content.py  marshalling.py  types.py
scaleway-async/scaleway_async/cockpit/v1/: __init__.py  api.py  content.py  marshalling.py  types.py
scaleway-async/scaleway_async/cockpit/v1beta1/: __init__.py  api.py  content.py  marshalling.py  types.py
scaleway-async/scaleway_async/container/v1/: __init__.py  api.py  content.py  marshalling.py  types.py
scaleway-async/scaleway_async/container/v1beta1/: __init__.py  api.py  content.py  marshalling.py  types.py
scaleway-async/scaleway_async/datalab/v1beta1/: __init__.py  api.py  marshalling.py  types.py
scaleway-async/scaleway_async/datawarehouse/v1beta1/: __init__.py  api.py  content.py  marshalling.py  types.py
scaleway-async/scaleway_async/dedibox/v1/: api.py  marshalling.py  types.py
scaleway-async/scaleway_async/document_db/v1beta1/: __init__.py  api.py  content.py  marshalling.py  types.py
scaleway-async/scaleway_async/domain/v2beta1/: __init__.py  api.py  content.py  marshalling.py  types.py
scaleway-async/scaleway_async/edge_services/v1alpha1/: __init__.py  api.py  marshalling.py  types.py
scaleway-async/scaleway_async/edge_services/v1beta1/: __init__.py  api.py  content.py  marshalling.py  types.py
scaleway-async/scaleway_async/environmental_footprint/v1alpha1/: __init__.py  api.py  marshalling.py  types.py
scaleway-async/scaleway_async/file/v1alpha1/: __init__.py  api.py  content.py  marshalling.py  types.py
scaleway-async/scaleway_async/flexibleip/v1alpha1/: __init__.py  api.py  content.py  marshalling.py  types.py
scaleway-async/scaleway_async/function/v1beta1/: __init__.py  api.py  content.py  marshalling.py  types.py
scaleway-async/scaleway_async/iam/v1alpha1/: __init__.py  api.py  marshalling.py  types.py
scaleway-async/scaleway_async/inference/v1/: api.py  content.py  types.py  (+1 more)
scaleway-async/scaleway_async/std/: __init__.py  api.py  types.py
scaleway-async/tests/: test_registry_v1.py  test_test_v1.py
scaleway-core/: README.md  pyproject.toml
scaleway-core/scaleway_core/: __init__.py  api.py  client.py
scaleway-core/scaleway_core/bridge/: __init__.py  decimal.py  money.py  region.py  scwfile.py  serviceinfo.py  timeseries.py  zone.py
scaleway-core/scaleway_core/profile/: __init__.py  env.py  file.py  profile.py
scaleway-core/scaleway_core/utils/: __init__.py  fetch_all_pages.py  project_or_organization_id.py  random_name.py  resolve_one_of.py  strenummeta.py  validate_path_param.py  waiter.py
scaleway-core/scaleway_core/validations/: string_validation.py
scaleway-core/tests/: test_bridge_marshal.py  test_profile_env.py  test_profile_file.py  utils.py
scaleway/mongodb/v1/: custom_api.py
scaleway/scaleway/: __init__.py  _bridge.py  _dependancies.py
scaleway/scaleway/instance/: custom_api.py
scaleway/scaleway/std/: __init__.py  marshalling.py  types.py
scaleway/tests/: conftest.py  test_instance.py  test_record_change_marshalling.py  test_registry_v1.py  test_test_v1.py  test_test_v1_marshalling.py  test_total_count_legacy.py  test_vpc.py  utils.py
(+1200 files in other folders)
