[tool.poetry]
name = "scaleway-sdk-python"
version = "0.1.0"
description = ""
authors = ["Laure-di <masson.laure.l@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
furo = "^2024.8.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
