[tool.poetry]
name = "scaleway-docs"
version = "2.0.0"
description = ""
authors = ["Scaleway <opensource@scaleway.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.8"
sphinx-rtd-theme = "^1.1.1"
Sphinx = "^5"
scaleway-core = { path = "../scaleway-core", develop = true }
scaleway = { path = "../scaleway", develop = true }
scaleway-async = { path = "../scaleway-async", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
