[tool.poetry]
name = "scaleway-sdk-python-docs"
version = "2.7.0"
description = ""
authors = ["Scaleway <opensource@scaleway.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
sphinx = "^8.1.3"
furo = "^2024.8.6"
scaleway-core = { path = "../scaleway-core", develop = true }
scaleway = { path = "../scaleway", develop = true }
scaleway-async = { path = "../scaleway-async", develop = true }
sphinx-autoapi = "^3.4.0"
sphinx-copybutton = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
