[tool.poetry]
name = "scaleway-docs"
version = "2.0.0"
description = ""
authors = ["Scaleway <opensource@scaleway.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
sphinx-rtd-theme = "^3.1.0"
Sphinx = "^7"
scaleway-core = { path = "../scaleway-core", develop = true }
scaleway = { path = "../scaleway", develop = true }
scaleway-async = { path = "../scaleway-async", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
