[tool.poetry]
name = "scaleway-async"
version = "2.0.0"
description = "Scaleway SDK for Python"
authors = ["Scaleway <opensource@scaleway.com>"]
license = "BSD"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = ">=3.10"
scaleway-core = "*"

[tool.poetry.group.dev.dependencies]
scaleway-core = { path = "../scaleway-core", develop = true }
ruff = ">=0.5.0,<0.12.5"
mypy = "^1.5.1"
ty = "^0.0.1a15"
pyrefly = "^0.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["E501"]
select = [
    "ASYNC", # https://docs.astral.sh/ruff/rules/#flake8-async-async
    "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "ERA", # https://docs.astral.sh/ruff/rules/#eradicate-era
    "FBT", # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
    "FIX", # https://docs.astral.sh/ruff/rules/#flake8-fixme-fix
    "FURB", # https://docs.astral.sh/ruff/rules/#refurb-furb
    "RET", # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "T10", # https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
    "YTT", # https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
]

[tool.ty.rules]
missing-argument = "ignore"
invalid-argument-type = "ignore"

[tool.pyrefly.errors]
import-error = false
missing-argument = false
bad-argument-type = false
invalid-argument = false
