[tool.poetry]
name = "scaleway-async"
version = "2.0.0"
description = "Scaleway SDK for Python"
authors = ["Scaleway <opensource@scaleway.com>"]
license = "BSD"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = ">=3.10"
scaleway-core = "*"

[tool.poetry.group.dev.dependencies]
scaleway-core = { path = "../scaleway-core", develop = true }
ruff = ">=0.5.0,<0.12.9"
mypy = "^1.5.1"
ty = "^0.0.1a15"
pyrefly = ">=0.24.2,<0.27.0"
pytest = "^8.4.1"
pytest-recording = "^0.13.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["E501"]
select = [
    "ASYNC", # https://docs.astral.sh/ruff/rules/#flake8-async-async
    "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "DTZ", # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "ERA", # https://docs.astral.sh/ruff/rules/#eradicate-era
    "EXE",# https://docs.astral.sh/ruff/rules/#flake8-executable-exe
    "F",# https://docs.astral.sh/ruff/rules/#pyflakes-f
    "FBT", # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
    "FIX", # https://docs.astral.sh/ruff/rules/#flake8-fixme-fix
    "FLY",# https://docs.astral.sh/ruff/rules/#flynt-fly
    "FURB", # https://docs.astral.sh/ruff/rules/#refurb-furb
    "G",# https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    "ICN",# https://docs.astral.sh/ruff/rules/#flake8-import-conventions-icn
    "INT",# https://docs.astral.sh/ruff/rules/#flake8-gettext-int
    "ISC",# https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
    "LOG",# https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "PERF",# https://docs.astral.sh/ruff/rules/#perflint-perf
    "PGH",# https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "PYI",# https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
    "Q",# https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RET", # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "RSE",# https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "SIM",# https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SLF",# https://docs.astral.sh/ruff/rules/#flake8-self-slf
    "SLOT",# https://docs.astral.sh/ruff/rules/#flake8-slots-slot
    "T10", # https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
    "T20",# https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "TD",# https://docs.astral.sh/ruff/rules/#flake8-todos-td
    "YTT", # https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
]

[tool.ty.rules]
missing-argument = "ignore"
invalid-argument-type = "ignore"

[tool.pyrefly.errors]
import-error = false
missing-argument = false
bad-argument-type = false
invalid-argument = false
